# PDAL

./: CMakeLists.txt
.github/workflows/: alpine.yml  conda.yml
cmake/: ceres.cmake  options.cmake  unix_compiler_options.cmake  win32_compiler_options.cmake
doc/: references.rst
doc/stages/: filters.idis.rst  readers.ept.rst
filters/: DelaunayFilter.cpp  FaceRasterFilter.cpp  FaceRasterFilter.hpp  FerryFilter.cpp  HexBinFilter.cpp  HexBinFilter.hpp  InverseDensityImportanceSamplingFilter.cpp  InverseDensityImportanceSamplingFilter.hpp  PointNetFilter.cpp  PointNetFilter.hpp  ReturnInfoTrajectoryFilter.cpp  SMRFilter.cpp  ScanAngleTrajectoryFilter.cpp
filters/private/: Segmentation.cpp  Segmentation.hpp
filters/private/hexer/: HexGrid.cpp  HexGrid.hpp  Hexagon.hpp  Path.cpp  Path.hpp  Segment.cpp
filters/private/trajectory/: Pulse.cpp  Pulse.hpp  PulseCollection.hpp
io/: CopcReader.cpp  EptReader.cpp  GDALWriter.cpp  TINWriter.cpp  TINWriter.hpp  TextWriter.cpp
io/private/: EptSupport.cpp
io/private/ept/: TileContents.cpp  TileContents.hpp
kernels/private/density/: OGR.hpp
pdal/: Mesh.hpp  PDALUtils.cpp  Polygon.cpp  pdal_types.hpp
pdal/private/: SimpleHexGrid.cpp  SimpleHexGrid.hpp
pdal/util/: Charbuf.hpp  ProgramArgs.hpp  Utils.cpp  pdal_util_export.hpp
plugins/: CMakeLists.txt
plugins/trajectory/: CMakeLists.txt
plugins/trajectory/cmake/: CMakeLists.txt  project-config-version.cmake.in  project-config.cmake.in
plugins/trajectory/doc/: 01-abstract.md  02-intro.md  03-fixed.md  04-traj.md  09-refs.md  README.md  cubic.mac  lidar-traj.bib  lidar-traj.tex  preprint.bst  proj.mac  sbet.txt
plugins/trajectory/filters/: CMakeLists.txt  PulseCollection.cpp  ReturnInfoTrajectoryFilter.cpp  ReturnInfoTrajectoryFilter.hpp  SRITrajectory.cpp  SRITrajectory.hpp  ScanAngleTrajectoryFilter.cpp  ScanAngleTrajectoryFilter.hpp  SplineFit.cpp  SplineFit.hpp  Utils.hpp
plugins/trajectory/resources/: CMakeLists.txt  trajectory.cfg
plugins/trajectory/sandbox/: CMakeLists.txt  lasertraj.cpp  lasertraj.hpp  traj-ceres.cpp
plugins/trajectory/scripts/: comparetraj.m  lastotraj.sh  loadtrajectory.m  sbettotext.sh  trajresidue.m
plugins/trajectory/scripts/python/: error_plots.py  path_comparison.py
plugins/trajectory/src/: CMakeLists.txt  Params.cpp  Pulse.cpp  PulseCollection.cpp  SplineFit.cpp
plugins/trajectory/src/LidarTrajectory/: Params.hpp  Pulse.hpp  PulseCollection.hpp  SplineFit.hpp  Utils.hpp
plugins/trajectory/test/: CMakeLists.txt  testtraj.cpp
scripts/ci/alpine/: setup.sh
scripts/ci/conda/: setup.sh
scripts/ci/linux/: cmake.sh  setup.sh
scripts/ci/osx/: cmake.sh  setup.sh
scripts/ci/win/: cmake.sh  setup.sh
scripts/docker/ubuntu/: Dockerfile
test/unit/: CMakeLists.txt  SegmentationTest.cpp
test/unit/filters/: HexbinFilterTest.cpp
test/unit/io/: CopcReaderTest.cpp
